--- a/index.html
+++ b/index.html
@@ -27,21 +27,24 @@
   </nav>
   <div class="container">
     <div class="row justify-content-center ">
-      <div class="col-4">
+      <div class="col-3 mb-3">
         To-Do App Below
-        <form class="form-row">
-          <div class="col-auto ">
-            <label for="todo-item" class="sr-only"> To-Do Item </label>
-            <input type="password" class="form-control" id="todo-item" placeholder="e.g. Eggs">
-          </div>
-          <button type="button" class="btn btn-primary mb-2">Add Item</button>
-        </form>
       </div>
+      <form class="form-row col-10">
+        <div class="col-8">
+          <label for="todo-item" class="sr-only"> To-Do Item </label>
+          <input type="password" class="form-control" id="todo-item" placeholder="e.g. Eggs">
+        </div>
+        <button type="button" class="btn btn-primary mb-2 col-3" onclick="sendAlert('That is Awesome')">Add
+          Item</button>
+      </form>
 
     </div>
   </div>
 
+
   <!-- Optional JavaScript -->
+  <script src="./scripts/todo.js"> </script>
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
