added cross-out feature in JS

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             Item</button>
         </form>
 
-        <ul id="todo-list" class="list-unstyled mt-3"></ul>
+        <ul id="todo-list" class="list-unstyled mt-3 todoList"></ul>
       </div>
 
     </div>
